--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 Ftest.R contains R code
-Returns.csv contains the data for the example in Fyesy.R
-The pdf file is apaper for the F-test
+Returns.csv contains the data for the example in Ftest.R
+The pdf file is a paper for the F-test using non-central F-distribution
